# DustEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  doxygen
.github/workflows/: cmake-multi-platform.yml
cmake/: DustAddExample.cmake
examples/: CMakeLists.txt  Readme.md
examples/cubes/: CMakeLists.txt  main.cpp
examples/cubes/assets/: depth.vert  shader.frag  shader.vert
examples/simple/: CMakeLists.txt  main.cpp
examples/simple2d/: CMakeLists.txt  main.cpp
examples/sponza/: CMakeLists.txt  README.md  general_inspector.hpp  main.cpp
examples/sponza/assets/: depth.frag  pbr.glsl  shader.frag  shader.vert
examples/triangle/: CMakeLists.txt  main.cpp
include/dust/: dust.hpp
include/dust/core/: application.hpp  layer.hpp  log.hpp  platform.hpp  profiling.hpp  time.hpp  types.hpp  window.hpp
include/dust/editor/: editor.hpp  editor_scene_view.hpp  imgui_extensions.hpp  model_tool.hpp
include/dust/io/: assetsManager.hpp  fileReader.hpp  inputManager.hpp  keycodes.hpp  loaders.hpp  resource.hpp  resourceFile.hpp  resourceManager.hpp
include/dust/render/: camera.hpp  cascadeShadowMap.hpp  framebuffer.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  renderAPI.hpp  renderPass.hpp  renderer.hpp  shader.hpp  skybox.hpp  texture.hpp
include/dust/render/shaders/: pbr.glsl
include/dust/scripting/: script.hpp  scriptingManager.hpp
include/dust/utils/: string_utils.hpp
include/mx/: mx.hpp
include/mx/core/: application.hpp  log.hpp  time.hpp  types.hpp  window.hpp
include/mx/render/: renderAPI.hpp  renderer.hpp
scripts/: run_in_renderdoc.sh  run_tracy.sh
src/: CMakeLists.txt
src/core/: application.cpp  entryPoint.cpp  layer.cpp  window.cpp
src/editor/: editor.cpp  editor_scene_view.cpp  imgui_extensions.cpp  model_tool.cpp
src/io/: assetsManager.cpp  fileReader.cpp  inputManager.cpp  loaders.cpp  resource.cpp  resourceFile.cpp  resourceManager.cpp
src/render/: camera.cpp  framebuffer.cpp  light.cpp  material.cpp  mesh.cpp  model.cpp  renderPass.cpp  renderer.cpp  shader.cpp  skybox.cpp  texture.cpp
src/scripting/: script.cpp  scriptingManager.cpp
src/utils/: string_utils.cpp
